GH-1936 The RTL layout issue - Explicitly set the input direction instead of relying on the global dir attribute

--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -125,7 +125,7 @@
     border-right: var(--iti-triangle-border) solid transparent;
     border-top: var(--iti-arrow-height) solid var(--iti-arrow-color);
 
-    [dir="rtl"] & {
+    [dir="rtl"] &:not([dir="ltr"]) {
       margin-right: var(--iti-arrow-padding);
       margin-left: 0;
     }
