--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -322,7 +322,7 @@
 }
 
 //* Media query for high PPI/Retina Displays.
-@media (min-resolution: 2x) {
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .iti__flag { background-image: var(--iti-path-flags-2x); }
   .iti__globe { background-image: var(--iti-path-globe-2x); }
 }
