--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -75,10 +75,8 @@ input::placeholder {
     --iti-border-color: #5b5b5b;
     --iti-dialcode-color: #999999;
     --iti-dropdown-bg: #0d1117;
-    --iti-arrow-color: #aaaaaa;
     --iti-hover-color: #30363d;
-    --iti-path-globe-1x: url("../img/globe_light.webp");
-    --iti-path-globe-2x: url("../img/globe_light@2x.webp");
+    --iti-icon-color: #aaa;
   }
 }
 
