Update large flags demo to latest css (lots of styling fixes)

--- a/site/src/docs/docs_page_template.html.ejs
+++ b/site/src/docs/docs_page_template.html.ejs
@@ -6,7 +6,7 @@
     <link rel="canonical" href="https://intl-tel-input.com/<%= canonical_path %>" />
     <meta name="description" content="<%= meta_desc %>">
 
-    <%= common_styles %>
+    <%= bootstrap_styles %>
     <link rel="stylesheet" href="/css/website.css?<%= time %>" />
     <link rel="stylesheet" href="/css/prism.css">
     <link rel="stylesheet" href="/css/prism-overrides.css?<%= time %>">
