--- a/site/src/homepage/homepage_template.html.ejs
+++ b/site/src/homepage/homepage_template.html.ejs
@@ -8,7 +8,8 @@
       name="description"
       content="International Telephone Input - a JavaScript plugin for entering international telephone numbers."
     />
-    <%= common_styles %>
+    <%= bootstrap_styles %>
+    <%= iti_styles %>
     <link rel="stylesheet" href="/css/website.css?<%= time %>" />
     <%= analytics %>
   </head>
