--- a/site/src/playground/playground_template.html.ejs
+++ b/site/src/playground/playground_template.html.ejs
@@ -8,7 +8,8 @@
       name="description"
       content="intl-tel-input playground - interactively tweak init options and see the plugin update live."
     />
-    <%= common_styles %>
+    <%= bootstrap_styles %>
+    <%= iti_styles %>
     <link rel="stylesheet" href="/css/website.css?<%= time %>" />
     <%= analytics %>
   </head>
