--- a/site/src/examples/examples_page_template.html.ejs
+++ b/site/src/examples/examples_page_template.html.ejs
@@ -6,7 +6,10 @@
     <link rel="canonical" href="https://intl-tel-input.com/<%= canonical_path %>" />
     <meta name="description" content="An example use of International Telephone Input. <%= meta_desc %>">
 
-    <%= common_styles %>
+    <%= bootstrap_styles %>
+    <% if (typeof omit_iti_styles === 'undefined') { %>
+      <%= iti_styles %>
+    <% } %>
     <% if (typeof stylesheet_before_demo_css !== 'undefined') { %>
       <link rel="stylesheet" href="<%= stylesheet_before_demo_css %>?<%= time %>">
     <% } %>
